test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_bitwise_negation_literal.sol
contract C layout at ~0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFE {}
// ----
// UnimplementedFeatureError 1834: (0-91): Code generation is not supported for contracts with specified storage layout base.
